# packages/api/src/schema.ts
@@ -569,6 +569,22 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/v1/agent/conversations/{id}": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get: operations["MarketController_oneOfMine"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/v1/agent/conversations/{id}/messages": {
         parameters: {
             query?: never;
@@ -2043,6 +2059,27 @@ export interface operations {
                 };
                 content: {
                     "application/json": components["schemas"]["ConversationResponse"][];
+                };
+            };
+        };
+    };
+    MarketController_oneOfMine: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path: {
+                id: string;
+            };
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["ConversationResponse"];
                 };
             };
         };
